# tigramite

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  DESCRIPTION  FUNDING.yml  LICENSE  Makefile  NAMESPACE  RCIT.R  README.md  RIT.R  Updates.md  dcorr_nulldists.npz  environment_py2.yml  environment_py3.yml  generate_dcorr_nulldist.py  generate_gpace_nulldist.py  gpace_nulldists_acepack.npz  gpace_nulldists_purepython.npz  install_r_packages.sh  pyproject.toml  pytest.ini  random_fourier_features.R  release_on_pip.sh  repmat.R  requirements.txt  run_pcmci_parallel.py  run_pcmciplus_parallel.py  setup.cfg  setup.py  setup_tigramite_cython_code.py  tigramite_jupyter_example.ipynb  tigramite_tutorial.ipynb  tox.ini  versions.py
R/: F2CI.R  FLXMRglm3.R  IP_discovery.R  KCIT.R  OR_discovery2.R  RCIT.R  RCoT.R  RCoT_wrap.R  RF2CI.R  RFCI_vstruc.R  RIT.R  U_KCI.R  allDiscrPath.R  allUncovPath.R  allUncovPath_2vertices.R  checkEdges1.R  dep_triple.R  gauss_mix_modeling.R  gauss_mix_modeling_joint.R  gauss_mix_modeling_single.R  generate_DAG.R  generate_mix_dataset.R  generate_samps_DAG.R  instantiate_CMJ.R  normalize.R  repmat.R  updateList_m.R
docker/: Dockerfile  dependencies.txt  docker-compose-builder.yml  docker-compose-development.yml  install_packages.sh
docs/: Makefile  Pipfile  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
gui/: __init__.py  constants.py  methods.py  plotWindow.py  projectWindow.py  selectionWindow.py  terminalWindow.py  widgets.py
man/: RCIT.Rd  RIT.Rd  normalize.Rd  (+2 more)
(+260 files in other folders)
