[project]
name = "tigramite"
version = "5.2.5.2"
description = "Tigramite causal inference for time series"
authors = [
    { name = "Jakob Runge", email = "jakob@jakob-runge.com" },
]
license = { text = "GPL" }
readme = "README.md"
keywords = ["causal inference", "causal discovery", "prediction", "time series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy<2.0,>=1.18",
    "scipy<2.0,>=1.10.0",
    "six>=1.16.0",
    "numba<1.0,>=0.56.4",
]

[project.optional-dependencies]
all = [
    "scikit-learn>=1.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "networkx>=3.0",
    "gpytorch>=1.9.1",
    "dcor>=0.6",
    "joblib>=1.2.0",
    "ortools==9.9.3963",
    "torch!=2.0.1,!=2.1.0,>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/jakobrunge/tigramite/"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "nose>=1.3.7",
    "pytest>=8.1.1",
    "tox>=4.14.2",
]
